# idealista-tracker-ai

./: .dockerignore  .env.example  .gitignore  .replit  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN_AI_ENRICHMENT_RESEARCH.md  PROJECT_PLAN_2025-12-12.md  README.md  app.py  batch_enrich.py  check_airport.py  config.py  debug_enrichment.py  docker-compose.yml  fix_airport_distances.py  fix_areas.py  fix_municipality.py  fix_prices.py  land_detail_design_analysis.md  models.py  pyproject.toml  recalculate_enrichment.py  replit.md  test_claude_debug.py  test_enrichment_fixes.py  test_google_api.py  test_tabs.html
attached_assets/: Pasted--Complete-Material-Design-3-Integration-Plan-CURRENT-PROBLEMS-IDENTIFIED-From-your-scre-1757689201536_1757689201537.txt  Pasted--Idealista-Land-Watch-Comprehensive-Refactoring-Tasks-OVERVIEW-This-document-contains-prio-1757666902942_1757666902943.txt  Pasted--Material-Design-3-UI-Refactoring-Guide-Idealista-Land-Watch-DESIGN-SYSTEM-ADOPTION-MATER-1757669351060_1757669351061.txt  Pasted--Scoring-System-Refactoring-Tasks-Idealista-Land-Watch-OVERVIEW-The-current-scoring-system-1757668854920_1757668854921.txt  Pasted--UI-Consistency-Visual-Unification-Plan-ANALYZED-PROBLEMS-FROM-SCREENSHOTS-Imag-1757674047239_1757674047241.txt
migrations/: 005_add_indexes.sql  006_add_idealista_property_id.sql  add_is_favorite_column.sql  add_land_history_table.sql  add_listing_status_columns.sql  add_sync_history_counts.sql
routes/: api_routes.py  language_routes.py  main_routes.py
services/: anthropic_service.py  description_service.py  (+14 more)
(+46 files in other folders)
