[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.66.0",
    "apscheduler>=3.11.0",
    "defusedcsv>=3.0.0",
    "email-validator>=2.3.0",
    "flask-caching>=2.3.1",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "google-api-python-client>=2.181.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "gunicorn>=23.0.0",
    "imapclient>=3.0.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.2",
    "pytest-flask>=1.3.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "redis>=6.4.0",
    "flask-wtf==1.2.1",
]
